--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,5 @@ tag_color:
   tools: purple
   projects: red
   events: yellow
-  games: green
-  songs: green
-  shows: green
+  interests: green
   ideas: blue
